# InstaShop

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: account_verification_email.html  forget_password.html  login.html  register.html  reset_password.html  reset_password_email.html  verify_email.html
category/: admin.py  models.py
category/migrations/: 0001_initial.py  0002_alter_productcategory_options.py
core/: urls.py
core/settings/: base.py  local.py
static/css/: ui.css
static/js/: function.js
store/: admin.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py
store/templates/store/: cart.html  checkout.html  product-details.html  store.html
templates/: base.html  home.html
templates/includes/: alerts.html  footer.html  navbar.html
utils/: context_processors.py
